Each item collection has a corresponding struct type with two fields: the item instance's value, and the guid (OCR) for that item instance.
Step functions now use the struct types for item inputs.